fixes bug 93582 "nsFileChannel::AsyncOpen synchronously stat's the file before returning" r=gordon, sr=dougt